# cyndra

./: .all-contributorsrc  .dockerignore  .env  .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  DEVELOPING.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  Makefile.toml  README.md  cliff.toml  docker-bake.hcl  docker-compose.dev.yml  docker-compose.yml  install.ps1  install.sh
.cargo/: audit.toml
.circleci/: config.yml  production-ssh-config.sh  qa-docker.ps1  qa-docker.sh  qa-wasm.ps1  qa-wasm.sh  qa.ps1  qa.sh  unstable-ssh-config.sh
admin/: Cargo.toml  README.md
api/: Cargo.toml  Containerfile  Containerfile.dev  build.rs
api-client/: Cargo.toml
api-client/src/: lib.rs  util.rs
auth/: Cargo.toml  README.md  integration.sh  integration_docker.sh
backends/: Cargo.toml
builder/: Cargo.toml  integration.sh
builder/src/: lib.rs  main.rs
builder/templates/: cargo-chef.Dockerfile  rust.Dockerfile.jinja2
builder/tests/: integration_tests.rs  rust.Dockerfile
cargo-cyndra/: Cargo.toml  README.md  build.rs  integration.sh  integration_docker.sh
codegen/: Cargo.toml
common/: Cargo.toml  types.ts
common-tests/: Cargo.toml
common-tests/src/: builder.rs  cargo_cyndra.rs  lib.rs  logger.rs  permit_pdp.rs  postgres.rs  provisioner.rs  resource_recorder.rs
deployer/: Cargo.toml  README.md  build.rs  integration.sh  prepare.sh
docker/: config.toml  entrypoint.sh  supervisord.conf
e2e/: README.md
gateway/: Cargo.toml  README.md
logger/: Cargo.toml  integration_docker.sh
logger/migrations/: 0000_init.sql
logger/src/: dal.rs  lib.rs  main.rs
logger/tests/: helpers.rs  integration_tests.rs
migrator/: Cargo.toml  db_script.sh  script.sh
next/: Cargo.toml  README.md
next/src/: lib.rs
orchestrator/: Cargo.toml
proto/: Cargo.toml  README.md  integration.sh
proto/src/: lib.rs
provisioner/: Cargo.toml  Containerfile  (+2 more)
resources/metadata/: Cargo.toml  README.md
resources/metadata/src/: lib.rs
resources/persist/: .gitignore  Cargo.toml  README.md
resources/persist/src/: lib.rs
resources/qdrant/: Cargo.toml
resources/qdrant/src/: lib.rs
resources/secrets/: Cargo.toml  README.md
resources/secrets/src/: lib.rs
resources/service-info/: Cargo.toml  README.md
resources/service-info/src/: lib.rs
resources/shared-db/: Cargo.toml  README.md
resources/shared-db/src/: lib.rs  mongo.rs  postgres.rs
runtime/: Cargo.toml  Makefile  README.md  developing.md  integration.sh
runtime/src/: alpha.rs  beta.rs  lib.rs  logger.rs  main.rs  plugins.rs  provisioner_factory.rs  resource_tracker.rs  rt.rs  start.rs  telemetry.rs  trace.rs
runtime/src/alpha/: args.rs  mod.rs
runtime/src/axum/: mod.rs
runtime/src/legacy/: error.rs  mod.rs
runtime/src/next/: mod.rs
runtime/tests/integration/: helpers.rs  loader.rs
runtime/tests/resources/axum-wasm-expanded/: Cargo.toml
runtime/tests/resources/axum-wasm-expanded/src/: lib.rs
runtime/tests/resources/bind-panic/: Cargo.toml
runtime/tests/resources/bind-panic-owned/: Cargo.toml
runtime/tests/resources/bind-panic-owned/src/: main.rs
runtime/tests/resources/loader-panic/: Cargo.toml
runtime/tests/resources/loader-panic-owned/: Cargo.toml
runtime/tests/resources/loader-panic-owned/src/: main.rs
runtime/tests/resources/loader-panic/src/: main.rs
runtime/tests/resources/main-panic/: Cargo.toml
runtime/tests/resources/main-panic/src/: main.rs
service/: Cargo.toml  integration.sh
service/src/: builder.rs  error.rs  lib.rs  loader.rs  logger.rs  persist.rs  runner.rs
service/tests/: build_crate.rs  loader.rs
service/tests/helpers/: mod.rs
service/tests/integration/: build_crate.rs  loader.rs
service/tests/integration/helpers/: loader.rs  sqlx.rs
service/tests/resources/bind-panic/: Cargo.toml
service/tests/resources/bind-panic/src/: lib.rs
service/tests/resources/build-panic/: Cargo.toml
service/tests/resources/build-panic/src/: lib.rs
service/tests/resources/is-bin/: Cargo.toml
service/tests/resources/is-bin/src/: main.rs
service/tests/resources/is-cdylib/: Cargo.toml
service/tests/resources/is-cdylib/src/: lib.rs
service/tests/resources/not-bin/: Cargo.toml
service/tests/resources/not-bin/src/: lib.rs
service/tests/resources/not-cdylib/: Cargo.toml
service/tests/resources/not-cyndra/: Cargo.toml
service/tests/resources/not-cyndra/src/: lib.rs  main.rs
service/tests/resources/sleep/: Cargo.toml
service/tests/resources/sleep-async/: Cargo.toml
service/tests/resources/sleep-async/src/: lib.rs
service/tests/resources/sleep/src/: lib.rs
service/tests/resources/sqlx-pool/: Cargo.toml
service/tests/resources/sqlx-pool/src/: lib.rs
service/tests/resources/workspace/alpha/: Cargo.toml
service/tests/resources/workspace/alpha/src/: main.rs
service/tests/resources/workspace/alpha2/: Cargo.toml
service/tests/resources/workspace/next/: Cargo.toml
service/tests/resources/workspace/next/src/: lib.rs
services/cyndra-actix-web/: Cargo.toml  README.md
services/cyndra-actix-web/src/: lib.rs
services/cyndra-axum/: Cargo.toml  README.md
services/cyndra-axum/src/: lib.rs
services/cyndra-next/: Cargo.toml
services/cyndra-next/src/: lib.rs
services/cyndra-poem/: Cargo.toml  README.md
services/cyndra-poem/src/: lib.rs
services/cyndra-poise/: Cargo.toml  README.md
services/cyndra-poise/src/: lib.rs
services/cyndra-rama/: Cargo.toml  README.md
services/cyndra-rama/src/: lib.rs
services/cyndra-rocket/: Cargo.toml  README.md
services/cyndra-rocket/src/: lib.rs
services/cyndra-salvo/: Cargo.toml  README.md
services/cyndra-salvo/src/: lib.rs
services/cyndra-serenity/: Cargo.toml  README.md
services/cyndra-serenity/src/: lib.rs
services/cyndra-thruster/: Cargo.toml  README.md
services/cyndra-thruster/src/: lib.rs
services/cyndra-tide/: Cargo.toml  README.md
services/cyndra-tide/src/: lib.rs
services/cyndra-tower/: Cargo.toml  README.md
services/cyndra-tower/src/: lib.rs
services/cyndra-warp/: Cargo.toml  README.md
services/cyndra-warp/src/: lib.rs
(+363 files in other folders)
