[package]
name = "cyndra-builder"
version = "0.54.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Docker build recipes for the Cyndra platform (cyndra.dev)"
homepage = "https://www.cyndra.dev"

[dependencies]
cyndra-common = { workspace = true, features = ["models"] }

askama = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
