[package]
name = "cyndra-common-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
hyper = { workspace = true }
cyndra-common = { workspace = true }
tower = { workspace = true }
cargo-cyndra = { path = "../cargo-cyndra" }
portpicker = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
