[package]
name = "cyndra-common-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
cargo-cyndra = { path = "../cargo-cyndra" }
hyper = { workspace = true }
portpicker = { workspace = true }
reqwest = { workspace = true }
cyndra-common = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }

[dependencies.cyndra-proto]
workspace = true
