[package]
name = "cyndra-logger"
version = "0.49.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
cyndra-backends = { workspace = true }
cyndra-common = { workspace = true, features = ["extract_propagation", "tonic"] }
cyndra-proto = { workspace = true, features = ["logger"] }

async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
prost-types = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
    "chrono",
    "json",
    "migrate",
    "postgres",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["default"] }

[dev-dependencies]
ctor = { workspace = true }
once_cell = { workspace = true }
portpicker = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
cyndra-common-tests = { workspace = true }
