[package]
name = "cyndra-next"
version = "0.8.0"
edition.workspace = true
license.workspace = true
description = "Macros and aliases to deploy wasm on the cyndra platform (https://www.cyndra.rs/)"
homepage = "https://www.cyndra.rs"

[lib]

[dependencies]
# most axum features can be enabled, but "tokio" and "ws" depend on socket2
# via "hyper/tcp" which is not compatible with wasi
axum = { workspace = true }
futures-executor = "0.3.21"
http = "0.2.7"
rmp-serde = "1.1.1"
tower-service = "0.3.1"
tracing-subscriber = { workspace = true }

[dependencies.cyndra-codegen]
workspace = true
features = ["next"]

[dependencies.cyndra-common]
workspace = true
features = ["wasm"]
