[package]
name = "cyndra-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Library for all the gRPC definitions used by cyndra"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
home = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true, features = ["process"] }
tonic = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }

[dependencies.cyndra-common]
workspace = true
features = ["claims", "error", "service", "wasm"]

[dev-dependencies]
tonic-build = { workspace = true }
