[package]
name = "cyndra-runtime"
version = "0.42.0"
edition.workspace = true
license.workspace = true
description = "Runtime to start and manage any service that runs on cyndra"

[lib]
doctest = false

[dependencies]
cyndra-codegen = { workspace = true }
cyndra-common = { workspace = true, features = ["extract_propagation"] }
cyndra-proto = { workspace = true, features = ["runtime"] }
cyndra-service = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
colored = { workspace = true, optional = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strfmt = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
portpicker = "0.1.1"
cyndra-service = { workspace = true, features = ["builder", "runner"] }
cyndra-proto = { workspace = true, features = ["provisioner"] }
uuid = { workspace = true }

[features]
default = ["setup-tracing"]

setup-tracing = [
    "tracing-subscriber/default",
    "tracing-subscriber/env-filter",
    "colored",
]
