[package]
name = "cyndra-runtime"
version = "0.47.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime to start and manage any service that runs on cyndra"

[lib]
doctest = false

[dependencies]
cyndra-api-client = { workspace = true }
cyndra-codegen = { workspace = true }
cyndra-common = { workspace = true, features = ["extract_propagation"] }
cyndra-proto = { workspace = true, features = ["runtime"] }
cyndra-service = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
colored = { workspace = true, optional = true }
hyper = { workspace = true, features = ["http1", "server", "tcp"] }
serde = { workspace = true }
serde_json = { workspace = true }
strfmt = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
portpicker = { workspace = true }
cyndra-service = { workspace = true, features = ["builder", "runner"] }
cyndra-proto = { workspace = true, features = ["provisioner"] }
uuid = { workspace = true }

[features]
default = ["setup-tracing"]
api-client-tracing = ["cyndra-api-client/tracing"]

setup-tracing = [
    "tracing-subscriber/default",
    "tracing-subscriber/env-filter",
    "dep:colored",
]
