[package]
name = "cyndra-service"
version = "0.34.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Service traits and macros to deploy on the cyndra platform (https://www.cyndra.rs/)"
homepage = "https://www.cyndra.rs"

[lib]
doctest = false

[dependencies]
cyndra-common = { workspace = true, features = [
    "claims",
    "service",
    "tracing",
    "display",
] }
cyndra-proto = { workspace = true, optional = true, features = ["runtime"] }

anyhow = { workspace = true }
async-trait = { workspace = true }
cargo_metadata = { workspace = true, optional = true }
dunce = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
strfmt = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[features]
default = []

builder = [
    "cargo_metadata",
    "tokio/process",
    "tokio/io-util",
    "tokio/sync",
    "tokio/time",
    "toml",
    "tracing",
]
runner = ["cyndra-proto", "tokio/process", "dunce", "tower"]
