[package]
name = "cyndra-service"
version = "0.48.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The core traits for running services on Cyndra (https://www.cyndra.rs/)"
homepage = "https://www.cyndra.rs"

[lib]
doctest = false

[dependencies]
cyndra-common = { workspace = true, features = [
    "service",
    "tracing",
] }
cyndra-proto = { workspace = true, optional = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
cargo_metadata = { workspace = true, optional = true }
dunce = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
strfmt = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[features]
default = []

builder = [
    "cargo_metadata",
    "tokio/process",
    "tokio/io-util",
    "tokio/sync",
    "tokio/time",
    "toml",
    "tracing",
]
runner = ["cyndra-proto/runtime-client", "tokio/process", "dunce"]
