[package]
name = "cyndra-service"
version = "0.55.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The core traits for running services on Cyndra (cyndra.dev)"
homepage = "https://www.cyndra.dev"

[dependencies]
cyndra-common = { workspace = true, features = ["models"] }

anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
strfmt = { workspace = true }
thiserror = { workspace = true }
