[package]
name = "cyndra-metadata"
version = "0.25.0"
edition = "2021"
license = "Apache-2.0"
description = "Plugin to get Cyndra service information"
keywords = ["cyndra-service", "metadata"]

[dependencies]
async-trait = "0.1.56"
serde = { version = "1.0.0", features = ["derive"] }
cyndra-service = { path = "../../service", version = "0.25.0" }
