[package]
name = "cyndra-persist"
version = "0.15.0"
edition = "2021"
license = "Apache-2.0"
description = "Plugin for persist objects"
keywords = ["cyndra-service", "persistence"]

[dependencies]
async-trait = "0.1.56"
bincode = "1.2.1"
serde = { version = "1.0.0", features = ["derive"] }
cyndra-common = { path = "../../common", version = "0.15.0", default-features = false }
cyndra-service = { path = "../../service", version = "0.15.0", default-features = false }
thiserror = "1.0.32"
