[package]
name = "cyndra-qdrant"
version = "0.54.0"
edition = "2021"
license = "Apache-2.0"
description = "Cyndra plugin for connecting to a Qdrant database"
repository = "https://github.com/cyndra-hq/cyndra"
keywords = ["cyndra-service", "qdrant"]

[dependencies]
async-trait = "0.1.56"
qdrant-client = "1.10.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cyndra-service = { path = "../../service", version = "0.54.0" }
