[package]
name = "cyndra-secrets"
version = "0.8.0"
edition = "2021"
license = "Apache-2.0"
description = "Plugin to for managing secrets on cyndra"
keywords = ["cyndra-service", "secrets"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
cyndra-service = { path = "../../service", version = "0.8.0" }
tokio = { version = "1.19.2", features = ["rt"] }
