[package]
name = "cyndra-secrets"
version = "0.40.0"
edition = "2021"
license = "Apache-2.0"
description = "Plugin to for managing secrets on cyndra"
keywords = ["cyndra-service", "secrets"]

[dependencies]
async-trait = "0.1.56"
serde_json = "1"
cyndra-service = { path = "../../service", version = "0.40.0" }
