[package]
name = "cyndra-service-info"
version = "0.24.0"
edition = "2021"
license = "Apache-2.0"
description = "Plugin to get Cyndra service information"
keywords = ["cyndra-service", "service-info"]

[dependencies]
async-trait = "0.1.56"
serde = { version = "1.0.0", features = ["derive"] }
cyndra-service = { path = "../../service", version = "0.24.0" }
