[package]
name = "cyndra-shared-db"
version = "0.5.2"
edition = "2021"
license = "Apache-2.0"
description = "Plugin for managing shared databases on cyndra"
keywords = ["cyndra-service", "database"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
mongodb = { version = "2.3.0", optional = true }
cyndra-service = { path = "../../service", version = "0.5.2", default-features = false }
sqlx = { version = "0.6.1", features = ["runtime-tokio-native-tls"], optional = true }
tokio = { version = "1.19.2", features = ["rt"] }

[features]
postgres = ["sqlx/postgres"]
