[package]
name = "cyndra-actix-web"
version = "0.52.0"
edition = "2021"
license = "Apache-2.0"
description = "Service implementation to run an actix webserver on cyndra"
repository = "https://github.com/cyndra-hq/cyndra"
keywords = ["cyndra-service", "actix"]

[workspace]

[dependencies]
actix-web = "4.3.1"
num_cpus = "1.15.0"
cyndra-runtime = { path = "../../runtime", version = "0.52.0", default-features = false }
