[package]
name = "cyndra-next"
version = "0.23.0"
edition = "2021"
license = "Apache-2.0"
description = "Macros and aliases to deploy wasm on the cyndra platform (https://www.cyndra.rs/)"
homepage = "https://www.cyndra.rs"

[workspace]

[lib]

[dependencies]
# most axum features can be enabled, but "tokio" and "ws" depend on socket2
# via "hyper/tcp" which is not compatible with wasi
axum = { version = "0.6.0", default-features = false }
futures-executor = "0.3.21"
http = "0.2.7"
rmp-serde = "1.1.1"
tower-service = "0.3.1"
cyndra-common = { path = "../../common", version = "0.23.0", features = ["wasm"] }
cyndra-codegen = { path = "../../codegen", version = "0.23.0", features = ["next"] }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["registry", "std"] }
