[package]
name = "cyndra-poem"
version = "0.17.0"
edition = "2021"
license = "Apache-2.0"
description = "Service implementation to run a poem webserver on cyndra"
keywords = ["cyndra-service", "poem"]

[workspace]

[dependencies]
poem = { version = "1.3.55" }
cyndra-runtime = { path = "../../runtime", version = "0.17.0" }

[dev-dependencies]
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
