[package]
name = "cyndra-poem"
version = "0.43.0"
edition = "2021"
license = "Apache-2.0"
description = "Service implementation to run a poem webserver on cyndra"
repository = "https://github.com/cyndra-hq/cyndra"
keywords = ["cyndra-service", "poem"]

[workspace]

[dependencies]
poem = { version = "2.0.0" }
cyndra-runtime = { path = "../../runtime", version = "0.43.0", default-features = false }

[dev-dependencies]
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
