[package]
name = "cyndra-poise"
version = "0.1.0"
edition = "2021"

[workspace]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { version = "0.5.2" }
cyndra-runtime = { path = "../../runtime", version = "0.1.0" }

[dev-dependencies]
cyndra-secrets = { path = "../../resources/secrets" }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
