[package]
name = "cyndra-poise"
version = "0.12.0-rc1"
edition = "2021"
license = "Apache-2.0"
description = "Service implementation to run a poise discord bot on cyndra"
keywords = ["cyndra-service", "poise", "discord-bot", "serenity"]

[workspace]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { version = "0.5.2" }
cyndra-runtime = { path = "../../runtime", version = "0.12.0-rc1" }

[dev-dependencies]
cyndra-secrets = { path = "../../resources/secrets" }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
