[package]
name = "cyndra-poise"
version = "0.16.0"
edition = "2021"
license = "Apache-2.0"
description = "Service implementation to run a poise discord bot on cyndra"
keywords = ["cyndra-service", "poise", "discord-bot", "serenity"]

[workspace]

[dependencies]
poise = { version = "0.5.2" }
cyndra-runtime = { path = "../../runtime", version = "0.16.0" }

[dev-dependencies]
cyndra-secrets = { path = "../../resources/secrets" }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
