[package]
name = "cyndra-rama"
version = "0.54.0"
edition = "2024"
license = "Apache-2.0"
description = "Service implementation to run a rama server on cyndra"
repository = "https://github.com/cyndra-hq/cyndra"
keywords = ["cyndra-service", "rama"]

[dependencies]
rama = { version = "0.2", features = ["tcp", "http-full"] }
cyndra-runtime = { path = "../../runtime", version = "0.54.0", default-features = false }

[features]
default = []
