[package]
name = "cyndra-rocket"
version = "0.32.0"
edition = "2021"
license = "Apache-2.0"
description = "Service implementation to run a rocket webserver on cyndra"
keywords = ["cyndra-service", "rocket"]

[workspace]

[dependencies]
rocket = { version = "0.5.0-rc.4" }
cyndra-runtime = { path = "../../runtime", version = "0.32.0", default-features = false }

[dev-dependencies]
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
