[package]
name = "cyndra-rocket"
version = "0.51.0"
edition = "2021"
license = "Apache-2.0"
description = "Service implementation to run a rocket webserver on cyndra"
repository = "https://github.com/cyndra-hq/cyndra"
keywords = ["cyndra-service", "rocket"]

[workspace]

[dependencies]
rocket = "0.5.0"
cyndra-runtime = { path = "../../runtime", version = "0.51.0", default-features = false }
