[package]
name = "cyndra-salvo"
version = "0.27.0"
edition = "2021"
license = "Apache-2.0"
description = "Service implementation to run a salvo webserver on cyndra"
keywords = ["cyndra-service", "salvo"]

[workspace]

[dependencies]
salvo = { version = "0.41.0" }
cyndra-runtime = { path = "../../runtime", version = "0.27.0", default-features = false }

[dev-dependencies]
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
