[package]
name = "cyndra-salvo"
version = "0.48.0"
edition = "2021"
license = "Apache-2.0"
description = "Service implementation to run a salvo webserver on cyndra"
repository = "https://github.com/cyndra-hq/cyndra"
keywords = ["cyndra-service", "salvo"]

[workspace]

[dependencies]
salvo = "0.63.0"
cyndra-runtime = { path = "../../runtime", version = "0.48.0", default-features = false }
