[package]
name = "cyndra-serenity"
version = "0.28.0"
edition = "2021"
license = "Apache-2.0"
description = "Service implementation to run a serenity server on cyndra"
keywords = ["cyndra-service", "serenity"]

[workspace]

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
cyndra-runtime = { path = "../../runtime", version = "0.28.0", default-features = false }

[dev-dependencies]
anyhow = "1.0.69"
cyndra-secrets = { path = "../../resources/secrets" }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
