[package]
name = "cyndra-thruster"
version = "0.37.0"
edition = "2021"
license = "Apache-2.0"
description = "Service implementation to run a thruster webserver on cyndra"
keywords = ["cyndra-service", "thruster"]

[workspace]

[dependencies]
thruster = { version = "1.3.0" }
cyndra-runtime = { path = "../../runtime", version = "0.37.0", default-features = false }

[dev-dependencies]
thruster = { version = "1.3.0", features = ["hyper_server"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
