[package]
name = "cyndra-tide"
version = "0.35.0"
edition = "2021"
license = "Apache-2.0"
description = "Service implementation to run a tide webserver on cyndra"
keywords = ["cyndra-service", "tide"]

[workspace]

[dependencies]
# Tide does not have tokio support. So make sure async-std is compatible with tokio
# https://github.com/http-rs/tide/issues/791
async-std = { version = "1.12.0", features = ["tokio1"] }
tide = { version = "0.16.0" }
cyndra-runtime = { path = "../../runtime", version = "0.35.0", default-features = false }

[dev-dependencies]
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
