[package]
name = "cyndra-tower"
version = "0.52.0"
edition = "2021"
license = "Apache-2.0"
description = "Service implementation to run a tower webserver on cyndra"
repository = "https://github.com/cyndra-hq/cyndra"
keywords = ["cyndra-service", "tower"]

[workspace]

[dependencies]
hyper = { version = "0.14.23", features = ["server", "tcp", "http1"] }
cyndra-runtime = { path = "../../runtime", version = "0.52.0", default-features = false }
tower = { version = "0.4.13", features = ["make"] }
