[package]
name = "cyndra-warp"
version = "0.54.0"
edition = "2021"
license = "Apache-2.0"
description = "Service implementation to run a warp webserver on cyndra"
repository = "https://github.com/cyndra-hq/cyndra"
keywords = ["cyndra-service", "warp"]

[workspace]

[dependencies]
warp = "0.3.3"
cyndra-runtime = { path = "../../runtime", version = "0.54.0", default-features = false }
